...
                DispatchQueue.main.async {
                    self.performSegue(withIdentifier: "ChannelList", sender: nil)
                }
            }, failure: { [weak self] error in
                guard let `self` = self else { return }
                DispatchQueue.main.async {
                    self.presentErrorAlert(withTitle: "Error", andMessage: error)
                }
            })
        } else {
            self.presentErrorAlert(withTitle: "Error", andMessage: "Enter username")
        }
    }
...
    //-----------------
    // MARK: - Helpers
    //-----------------
    
    func presentErrorAlert(withTitle title: String, andMessage message: String) {
        let alertVC = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alertVC.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
        present(alertVC, animated: true, completion: nil)
    }
}


